fix: prevent no search result text from overflowing

--- a/src/style/list/start-ui.less
+++ b/src/style/list/start-ui.less
@@ -204,7 +204,7 @@ body.theme-dark {
   margin-bottom: 16px;
   line-height: @line-height-lg;
   text-align: center;
-  white-space: pre;
+  white-space: pre-wrap;
 
   &__content {
     display: flex;
@@ -343,11 +343,11 @@ body.theme-dark .start-ui-list-header {
   }
 
   &__text {
-    margin-top: 24px;
+    margin: 24px 16px 0;
     font-size: @font-size-small;
     font-weight: @font-weight-bold;
     text-align: center;
-    white-space: pre;
+    white-space: pre-wrap;
   }
 
   &__button {
